--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 title: Boat Race
-hero_image: images/boat-race.png
+hero_image: images/small_banner.png
 description: Use Scratch to make a boat race game
 original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=false
 theme: cc-prototype
