--- a/en/meta.yml
+++ b/en/meta.yml
@@ -14,10 +14,10 @@ steps:
   - title: Getting started
   - title: Controlling the boat
   - title: Crashing
-  - title: "Challenge: Winning"
+  - title: "Challenge: Winning!"
   - title: "Challenge: Sound effects"
   - title: Time trial
   - title: Obstacles and power ups
-  - title: "Challenge: More obstacles"
-  - title: "Challenge: More boats"
-  - title: "Challenge: More levels"
+  - title: "Challenge: More obstacles!"
+  - title: "Challenge: More boats!"
+  - title: "Challenge: More levels!"
