--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Boat Race
 hero_image: images/small_banner.png
-description: Use Scratch to make a boat race game
+description: Make a boat race game where you have to avoid obstacles.
 original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=false
 theme: cc-prototype
 listed: false
