--- a/en/meta.yml
+++ b/en/meta.yml
@@ -10,14 +10,14 @@ interests: "games"
 technology: "scratch"
 steps:
   - title: Introduction
-  - title: "What you'll need"
+  - title: What you'll need
   - title: Getting started
   - title: Controlling the boat
   - title: Crashing
-  - title: "Challenge: Winning!"
-  - title: "Challenge: Sound effects"
+  - title: Challenge: winning!
+  - title: Challenge: sound effects
   - title: Time trial
   - title: Obstacles and power ups
-  - title: "Challenge: More obstacles!"
-  - title: "Challenge: More boats!"
-  - title: "Challenge: More levels!"
+  - title: Challenge: more obstacles!
+  - title: Challenge: more boats!
+  - title: Challenge: more levels!
