--- a/en/meta.yml
+++ b/en/meta.yml
@@ -14,10 +14,10 @@ steps:
   - title: Getting started
   - title: Controlling the boat
   - title: Crashing
-  - title: Challenge: winning!
-  - title: Challenge: sound effects
+  - title: "Challenge: winning!"
+  - title: "Challenge: sound effects"
   - title: Time trial
   - title: Obstacles and power ups
-  - title: Challenge: more obstacles!
-  - title: Challenge: more boats!
-  - title: Challenge: more levels!
+  - title: "Challenge: more obstacles!"
+  - title: "Challenge: more boats!"
+  - title: "Challenge: more levels!"
