--- a/en/meta.yml
+++ b/en/meta.yml
@@ -3,7 +3,7 @@ hero_image: images/small_banner.png
 description: Make a boat race game in which you have to avoid obstacles.
 original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=false
 theme: cc-prototype
-listed: false
+listed: true
 ingredient: false
 duration: 2
 interests: "games"
