--- a/en/meta.yml
+++ b/en/meta.yml
@@ -5,6 +5,7 @@ original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=
 theme: cc-prototype
 listed: true
 ingredient: false
+copyedit: true
 duration: 2
 interests: "games"
 technology: "scratch"
