Change theme to yellow

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,7 +2,7 @@ title: Boat Race
 hero_image: images/small_banner.png
 description: Make a boat race game in which you have to avoid obstacles.
 original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=false
-theme: cc-prototype
+theme: yellow
 listed: true
 ingredient: false
 copyedit: true
