Add site_area tags

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -9,6 +9,7 @@ copyedit: true
 duration: 2
 interests: "games"
 technology: "scratch"
+site_areas: codeclub, scratch
 steps:
   - title: Introduction
   - title: What you'll need
