--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,3 +1,4 @@
+---
 title: Boat Race
 hero_image: images/small_banner.png
 description: Make a boat race game in which you have to avoid obstacles.
@@ -7,19 +8,20 @@ listed: true
 ingredient: false
 copyedit: true
 duration: 2
-interests: "games"
-technology: "scratch"
+interests: games
+technology: scratch
 site_areas: codeclub, scratch
 steps:
-  - title: Introduction
-  - title: What you'll need
-  - title: Getting started
-  - title: Controlling the boat
-  - title: Crashing
-  - title: "Challenge: winning!"
-  - title: "Challenge: sound effects"
-  - title: Time trial
-  - title: Obstacles and power ups
-  - title: "Challenge: more obstacles!"
-  - title: "Challenge: more boats!"
-  - title: "Challenge: more levels!"
+- title: Introduction
+- title: What you'll need
+- title: Getting started
+- title: Controlling the boat
+- title: Crashing
+- title: 'Challenge: winning!'
+- title: 'Challenge: sound effects'
+- title: Time trial
+- title: Obstacles and power ups
+- title: 'Challenge: more obstacles!'
+- title: 'Challenge: more boats!'
+- title: 'Challenge: more levels!'
+
