--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,6 +7,7 @@ theme: yellow
 listed: true
 ingredient: false
 copyedit: true
+curriculum: creator, design-0, programming-2, phys-comp-0, manufacture-0, community-0
 duration: 2
 interests: games
 technology: scratch
