--- a/it-IT/meta.yml
+++ b/it-IT/meta.yml
@@ -2,7 +2,7 @@
 title: Barca da corsa
 hero_image: images/small_banner.png
 description: Crea un gioco in cui una barca deve gareggiare evitando degli ostacoli.
-original_url: https://www.codeclubprojects.org/en-GB/scratch/boat-race?redirect=false
+original_url: https://projects.raspberrypi.org/en/projects/boat-race
 theme: yellow
 listed: true
 ingredient: false
