--- a/cy-GB/meta.yml
+++ b/cy-GB/meta.yml
@@ -7,12 +7,17 @@ theme: yellow
 listed: true
 ingredient: false
 copyedit: true
-curriculum: creator, design-0, programming-2, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 duration: 2
 interests: games
 technology: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+technologies: scratch
+hardware: ''
+software: scratch
+version: 4
+last_tested: 2017-01-01
+steps: 
 - title: Cyflwyniad
 - title: Dechrau'r prosiect
 - title: "Rheoli'r cwch"
@@ -24,4 +29,3 @@ steps:
 - title: 'Her: Mwy o rwystrau!'
 - title: 'Her: Mwy o gychod!'
 - title: 'Her: Mwy o lefelau!'
-
