--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -7,12 +7,17 @@ theme: yellow
 listed: true
 ingredient: false
 copyedit: true
-curriculum: creator, design-0, programming-2, phys-comp-0, manufacture-0, community-0
+curriculum: 1, design-0, programming-1, phys-comp-0, manufacture-0, community-0
 duration: 2
 interests: games
 technology: scratch
-site_areas: codeclub, scratch
-steps:
+site_areas: projects
+technologies: scratch
+hardware: ''
+software: scratch
+version: 4
+last_tested: 2017-01-01
+steps: 
 - title: Einleitung
 - title: Plane dein Spiel
 - title: Boot steuern
@@ -24,4 +29,3 @@ steps:
 - title: 'Herausforderung: Noch mehr Hindernisse!'
 - title: 'Herausforderung: Mehr Boote!'
 - title: 'Herausforderung: Weitere Levels!'
-
