--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -18,27 +18,15 @@ software: scratch
 version: 4
 last_tested: 2017-01-01
 steps: 
--
-title: Introducción
--
-title: Lo que necesitarás
--
-title: Primeros pasos
--
-title: Controlando el barco
--
-title: Chocando
--
-title: 'Desafío: ¡ganar!'
--
-title: 'Desafío: efectos de sonido'
--
-title: Prueba de contrarreloj
--
-title: Obstáculos y poderes
--
-title: 'Desafío: ¡más obstáculos!'
--
-title: 'Desafío: ¡más barcos!'
--
-title: 'Desafío: ¡más niveles!'
+- title: Introducción
+- title: Lo que necesitarás
+- title: Primeros pasos
+- title: Controlando el barco
+- title: Chocando
+- title: 'Desafío: ¡ganar!'
+- title: 'Desafío: efectos de sonido'
+- title: Prueba de contrarreloj
+- title: Obstáculos y poderes
+- title: 'Desafío: ¡más obstáculos!'
+- title: 'Desafío: ¡más barcos!'
+- title: 'Desafío: ¡más niveles!'
